working armor change feature